# wasm-strings-example

./: README.md  package-lock.json  package.json
assembly/: index.ts
aswasm/: index.ts
chost/: CMakeLists.txt
chost/src/: main.c
cwasm/: main.c
test/: strings.js  test-as.js  test.js
tests/: index.js
