CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(chost)
SET(CMAKE_C_STANDARD 99)
INCLUDE(FetchContent)

# Add wasm3 for wasm loading
FETCHCONTENT_DECLARE(m3 GIT_REPOSITORY https://github.com/wasm3/wasm3.git GIT_TAG main)
FETCHCONTENT_MAKEAVAILABLE(m3)

FILE(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS src/*.c src/*.h)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SOURCE_FILES})
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE m3)
